--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -85,6 +86,7 @@ dependencies {
     ]
 
     testCompile testCompileDependencies
+    androidTestCompile testCompileDependencies
 
     //endregion
 }
